fix(pub-toc): toc was not visible when less then 100vh

--- a/src/styles/components/_pub-toc.scss
+++ b/src/styles/components/_pub-toc.scss
@@ -4,7 +4,7 @@
 .c-pub-toc {
 	@include mx.breakpoint('sm') {
 		overflow-y: auto;
-		height: 100vh;
+		max-height: 100vh;
 	}
 
   &__start-heading {
